--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -8,7 +8,7 @@
     <h1>Pig Latinizer</h1>
   
     <form method="post" action="/piglatinize">
-    <p>Input the text you want in PigLatin here:</p>
+    <p>Pig Latinizer!</p>
     <textarea name="user_phrase"></textarea>
     <br>
     <button type="submit" value="submit">Submit</button>
