--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -5,10 +5,10 @@
     <title>title</title>
   </head>
   <body>
-    <h1>Pig Latinizer</h1>
+    <h1>Pig Latinizer!</h1>
   
     <form method="post" action="/piglatinize">
-    <p>Pig Latinizer!</p>
+    <p>Enter your phrase:</p>
     <textarea name="user_phrase"></textarea>
     <br>
     <button type="submit" value="submit">Submit</button>
