--- a/views/results.erb
+++ b/views/results.erb
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Pig Latinizer</h1>
-    <p><%= "#{@piglatin}" %></p>
+    <p><%= @analyzed_text %></p>
     <p>eHay asway anway oldway anmay owhay ishedfay aloneway inway away iffskay inway ethay ulfGay ayStream andway ehay adhay onegay eightyway ourfay aysday ownay ithoutway akingtay away ishfay</p>
   </body>
 </html> 
